--- a/sign-up.html
+++ b/sign-up.html
@@ -23,7 +23,7 @@
         <br/>
         <br/>
         <label>Last Name</label><br/>
-        <input type="Last Name"/>
+        <input type="Last Name">
         <br/>
         <br/>
         <label>Email</label><br/>
@@ -35,9 +35,9 @@
         <br/>
         <br/>
         <label>Password</label><br/>
-        <input type="password"
-        <br/>
-        <br>
+        <input type="password">
+          <br/>
+          <br/>
         <input type="submit" value="Login">
     </form>
 </body>
